--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
         
        header{
-    background-image:url('../images/image5.jpg');
+    background-image:url('/images/image5.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     background-size:cover;
