--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
         
        header{
-    background-image:url('/images/image5.jpg');
+    background-image:url('./images/image5.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     background-size:cover;
@@ -66,7 +66,7 @@ section.section-back {
 
 
 .who-image {
-    background-image:url('../images/image2.jpg');
+    background-image:url('./images/image2.jpg');
     background-repeat:no-repeat;
     background-size:60%;
     background-position:center center;
@@ -74,7 +74,7 @@ section.section-back {
 }
 
 .parax{
-    background-image:url('../images/image1.jpg');
+    background-image:url('./images/image1.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     height:400px;
