--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="nav-wrapper white">
             <div class="container">
                 <!--<a href="#" class="brand-logo">McLeod Scholarship Foundation</a>-->
-                <a href="#" class="brand-logo"><img src="images/logo.jpg" alt="McLeod Foundation Logo" class="logo"></a>
+                <a href="#" class="brand-logo"><img src="../images/logo.jpg" alt="McLeod Foundation Logo" class="logo"></a>
                 <a href="#" class="sidenav-trigger" data-target="mobile-menu">  <i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="about">About</a></li>
