--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
-  <link rel="stylesheet" href="./css/style.css"/>
+  <link rel="stylesheet" href="/css/style.css"/>
 
 </head>
 <body>
@@ -21,8 +21,8 @@
       <div class="navbar-fixed">
         <nav class="nav-wrapper white">
             <div class="container">
-                <!--<a href="#" class="brand-logo">McLeod Scholarship Foundation</a>-->
-                <a href="#" class="brand-logo"><img src="./images/logo.jpg" alt="McLeod Foundation Logo" class="logo"></a>
+               <!-- <a href="#" class="brand-logo logo-text hidelogo">McLeod Scholarship Foundation</a>-->
+                <a href="#" class="brand-logo"><img src="images/logo.jpg" alt="McLeod Foundation Logo" class="logo"></a>
                 <a href="#" class="sidenav-trigger" data-target="mobile-menu">  <i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="about">About</a></li>
@@ -202,6 +202,7 @@
 <script src="https://kit.fontawesome.com/260dc706be.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+  <script src="js/init.js"></script>
 <script>
 $(document).ready(function(){
     $('.sidenav').sidenav();
