--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <nav class="nav-wrapper white">
             <div class="container">
                <!-- <a href="#" class="brand-logo logo-text hidelogo">McLeod Scholarship Foundation</a>-->
-                <a href="#" class="brand-logo"><img src="./images/logo.jpg" alt="McLeod Foundation Logo" class="logo"></a>
+                <a href="#" class="brand-logo"><img src="./images/logo-2.png" alt="McLeod Foundation Logo" class="logo"></a>
                 <a href="#" class="sidenav-trigger" data-target="mobile-menu">  <i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="about">About</a></li>
+                    <li><a href="subpage.html">About</a></li>
                     <li><a href="about">Program</a></li>
                     <li><a href="about">Resources</a></li>
                     <li><a href="about">Contact</a></li>
@@ -33,7 +33,7 @@
                 </ul>
             
                 <ul class="sidenav grey lighten-2" id="mobile-menu">
-                    <li><a href="about">About</a></li>
+                    <li><a href="subpage.html">About</a></li>
                     <li><a href="about">Program</a></li>
                     <li><a href="about">Resources</a></li>
                     <li><a href="about">Contact</a></li>
