--- a/subpage.html
+++ b/subpage.html
@@ -43,7 +43,7 @@
             
             </nav>
           </div>
-            <span class="slogan">Leaving a rich legacy through educations!<br>
+            <span class="slogan2">Leaving a rich legacy through educations!<br>
                 <span class="smaller-text">Excellence, Resilience,Integrity,Faith Community</span>
                 <p><a class="waves-effect waves-light btn pulse" href="#">Donate Now</a></p>
         </span>
